Refactor: Split ThreadedConsumer into two classes
So that it's possible to implement another class, that has exactly the
same interface, but does not have the level of indirection that the
thread pool forces and processes requests directly.

--- a/RabbitMQHare/RabbitMQHare.csproj
+++ b/RabbitMQHare/RabbitMQHare.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseConsumer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RabbitConnectorCommon.cs" />
     <Compile Include="RabbitConsumer.cs" />
