Add a synchronous consumer.
Useful when you know that your OnMessage listener is super super
quick, or already makes things asynchronous.

--- a/RabbitMQHare/RabbitMQHare.csproj
+++ b/RabbitMQHare/RabbitMQHare.csproj
@@ -59,6 +59,7 @@
     <Compile Include="RabbitExchange.cs" />
     <Compile Include="RabbitPublisher.cs" />
     <Compile Include="RabbitQueue.cs" />
+    <Compile Include="SyncConsumer.cs" />
     <Compile Include="ThreadedConsumer.cs" />
   </ItemGroup>
   <ItemGroup>
