Properly log connection issues
The first connection issue was not properly logged.
We now raise the correct event with some information depending on the
reason of failure

Change-Id: I30bdd72b42971fd5fb36fdfc278cf0d5b93ed0b6

--- a/RabbitMQHare/RabbitMQHare.csproj
+++ b/RabbitMQHare/RabbitMQHare.csproj
@@ -60,6 +60,7 @@
     <Compile Include="RabbitPublisher.cs" />
     <Compile Include="RabbitQueue.cs" />
     <Compile Include="SyncConsumer.cs" />
+    <Compile Include="ConnectionFailureException.cs" />
     <Compile Include="ThreadedConsumer.cs" />
   </ItemGroup>
   <ItemGroup>
