--- a/RabbitMQHare.UTest/RabbitMQHare.UTest.csproj
+++ b/RabbitMQHare.UTest/RabbitMQHare.UTest.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RabbitConsumer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RabbitConnectorCommon.cs" />
     <Compile Include="RabbitPublisher.cs" />
