Extract interfaces from Publisher and Consumer
Change-Id: If8c777ed7f9f8c23ad7ae066efb30291da29838c

--- a/RabbitMQHare/RabbitMQHare.csproj
+++ b/RabbitMQHare/RabbitMQHare.csproj
@@ -53,6 +53,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseConsumer.cs" />
+    <Compile Include="IPublisher.cs" />
+    <Compile Include="IConsumer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RabbitConnectorCommon.cs" />
     <Compile Include="RabbitConsumer.cs" />
