--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: c
 
 before_install:
-  - sudo add-apt-repository ppa:directhex/monoxide -y
+  - sudo add-apt-repository ppa:ermshiperete/monodevelop-beta -y
   - sudo apt-get update -qq > /dev/null
-  - sudo apt-get install -qq mono-devel > /dev/null
+  - sudo apt-get install mono-devel
   - mono --version
   - mozroots --import --sync
 
