Add graceful stop method
Method allow to wait for all messages to be published to rmq or to be
warned otherwise.
This method works better when publisher acknowledgements are used.

Change-Id: I3db60103d603e7da0f4b271e56ad9a0448316b5a

--- a/RabbitMQHare/RabbitMQHare.csproj
+++ b/RabbitMQHare/RabbitMQHare.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseConsumer.cs" />
+    <Compile Include="ClientStoppingException.cs" />
     <Compile Include="IPublisher.cs" />
     <Compile Include="IConsumer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
